--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,22 @@
 buildscript {
-    ext.kotlin_version = '1.2.71'
+    ext.kotlin_version = '1.3.0'
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.0.0'
+        // classpath 'com.google.gms:google-services:3.2.1'
+        classpath 'io.fabric.tools:gradle:1.28.1'
     }
+}
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
 }
 
 allprojects {
@@ -24,6 +32,16 @@ subprojects {
 }
 subprojects {
     project.evaluationDependsOn(':app')
+}
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.localbroadcastmanager' &&
+                    !details.requested.name.contains('androidx')) {
+                details.useVersion "1.0.0"
+            }
+        }
+    }
 }
 
 task clean(type: Delete) {
