--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.1+3
+  cloud_firestore: ^0.12.10
+  firebase_analytics: ^5.0.6
+  firebase_crashlytics: ^0.1.1+2
+  firebase_messaging: ^5.1.8
+  firebase_storage: ^3.0.8
+  firebase_auth: ^0.14.0+8
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,6 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
 
 # For information on the generic Dart part of this file, see the
