Se generan los iconos para la aplicacion android e ios

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons:
+
+flutter_icons:
+  image_path: "assets/Reaudi.png"
+  android: true
+  ios: true
+
+
 
 
 
