--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_messaging: ^5.1.8
   firebase_storage: ^3.0.8
   firebase_auth: ^0.14.0+8
+  bubble_tab_indicator: ^0.1.4
 
 
   # The following adds the Cupertino Icons font to your application.
