--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   assets:
     - assets/Reaudi.png
     - assets/profiles_photos/defaultFemenino.png
+    - assets/Raudi-Banner.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
